[project]
name = "escp-continuity"
maintainers = [
  {name = "Akshay Prasadan", email = "akprasadan@gmail.com"}]
version = "0.0.0"
description = "Implement examples used in paper on continuity of the eSCP operator."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "ucimlrepo>=0.0.7",
    "xlrd>=2.0.2",
]

[project.urls]
Repository = "https://github.com/akprasadan/escp-continuity.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
